--- a/Pages/style.css
+++ b/Pages/style.css
@@ -12,3 +12,13 @@ body
 {
   background-color: rgb(254,231,140);
 }
+
+nav
+{
+  font-size: medium;
+  font-family: Arial;
+  text-decoration: overline;
+  color: red;
+  
+
+}
