--- a/Pages/style.css
+++ b/Pages/style.css
@@ -3,22 +3,16 @@ h1    /*c'est un commentaire en css*/
   color: green;
 }
 
-p
-{
-  font-size: large; /*là c'est un paragraphe de 14 pixels*/
-}
 
 body
 {
-  background-color: rgb(254,231,140);
+  background-color: rgb(white);
 }
 
-nav
+.navigation
 {
   font-size: medium;
   font-family: Arial;
   text-decoration: overline;
   color: red;
-  
-
 }
