--- a/Pages/style.css
+++ b/Pages/style.css
@@ -1,6 +1,6 @@
 h1    /*c'est un commentaire en css*/
 {
-  color: green;
+  color: pink;
 }
 
 
@@ -11,5 +11,5 @@ body
 
 .navigation
 {
-  color: red;
+  color: black;
 }
