--- a/Pages/style.css
+++ b/Pages/style.css
@@ -1,21 +1,41 @@
+header
+{
+  font-size: xx-large;
+  color: purple;
+  text-decoration: none;
+  text-align: center;
+}
+
 nav
 {
   font-family: fantasy;
-  font-size: x-large
+  font-size: large;
+  text-decoration: none;
+  border : 5px black groove
+
 }
 
 body
 {
-  background-color: pink
+  background-color: pink;
+  border: 5px green groove;
 }
 
-h1
+
+
+.titrearticle
 {
-  color: green
+  text-align: center;
+  color: green;
+  text-decoration: underline;
+  font-style: normal;
 }
 
-p
+.tuesunparagrapheharry
 {
-  font-family: Arial;
-  font-size: large
+  width: 50%;
+  font-family:"Times New Roman";
+  color: red;
+  font-size: medium;
+  text-align: center;
 }
