--- a/Pages/style.css
+++ b/Pages/style.css
@@ -11,7 +11,8 @@ nav
   font-family: fantasy;
   font-size: large;
   text-decoration: none;
-  border : 5px black groove
+  border : 5px black groove;
+  display: flex;
 
 }
 
@@ -21,7 +22,19 @@ body
   border: 5px green groove;
 }
 
+p
+{
 
+  width: 350px;
+  margin: auto;
+  border: 1px solid black;
+  text-align: justify;
+  padding: 12px;
+  text-align: center;
+
+
+
+}
 
 .titrearticle
 {
@@ -33,7 +46,6 @@ body
 
 .tuesunparagrapheharry
 {
-  width: 50%;
   font-family:"Times New Roman";
   color: red;
   font-size: medium;
