--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header
   color: white;
   align-items: center;
   display: flex;
-  background-color: grey;
+  background-image: url('images/parquet2.png');
   border: 6px black groove;
   box-shadow: 0px 10px 30px black;
   margin: 3px
@@ -42,19 +42,55 @@ header
 
 nav
 {
-
-border-bottom: 3px black double;
+color: brown;
 text-align: center;
-font-size: large;
-font-family: monospace;
+font-size: 30px;
+font-family: 'policedutitre4';
 display: flex;
 justify-content: space-around;
 }
 
+nav a
+{
+  color: purple;
+}
+
+nav a:hover
+{
+  text-shadow: 0px 1px 1px black;
+}
+
 body
 {
-  background-image: url('images/fleurs.png');
-  /*background-color: #E9D2C0;*/
+  background-color: #E9D2C0;
+}
+
+footer
+{
+text-align: center;
+}
+
+.bandeaupage
+{
+  margin-top: 15px;
+  height: 200px;
+  border-radius: 5px;
+  background: url('images/applepen.png');
+  position: relative;
+  box-shadow: 0px 4px 4px #1c1a19;
+  margin-bottom: 25px;
+  align-items: center;
+
+  text-align: center;
+  font-family: arial;
+  color: green;
+  text-decoration: underline;
+  font-style: normal;
+}
+
+.pageactuelle
+{
+  color: red;
 }
 
 .corpspage
@@ -63,22 +99,4 @@ text-align: center;
 font-size: large;
 color: blue;
 border-bottom: 6px black dotted;
-}
-
-footer
-{
-text-align: center;
-}
-
-
-
-
-
-.titrearticle
-{
-  font-family: arial;
-  text-align: center;
-  color: green;
-  text-decoration: underline;
-  font-style: normal;
 }
