--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @font-face {
       font-family: 'policedutitre';
-      src: url('web_fonts/littletroublegirl-webfont.woff') format('woff');
+      src: url('web_fonts/Alice-Regular-webfont.woff') format('woff');
       font-weight: normal;
       font-style: normal;
 
 }
 
 @font-face {
-      font-family: 'policedutitre2';
-      src: url('web_fonts/AquilineTwo-webfont.woff') format('woff');
+      font-family: 'policedelien';
+      src: url('web_fonts/BLACKR-webfont.woff') format('woff');
       font-weight: normal;
       font-style: normal;
 }
@@ -52,6 +52,7 @@ header
 {
   font-family: 'policetitre42';
   font-size: 50px;
+  text-shadow: 0px 3px 3px #E66A8F;
   color: black;
   align-items: center;
   display: flex;
@@ -68,24 +69,29 @@ nav
 color: brown;
 text-align: center;
 font-size: 30px;
-font-family: 'policedutitre2';
+font-family: 'policedelien';
 display: flex;
 justify-content: space-around;
+
+border: 0px black solid;
+margin-left: 180px;
+margin-right: 180px;
+box-shadow: 0px 6px 6px black;
 }
 
 nav a
 {
-  color: purple;
+  color: #0C290B;
 }
 
 nav a:hover
 {
-  text-shadow: 0px 1px 1px black;
+  text-shadow: 0px 3px 3px white;
 }
 
 body
 {
-  background-image: url('images/husky.png');
+  background-image: url('images/rose.jpg');
   /*background-color: #E9D2C0;*/
 }
 
@@ -97,8 +103,6 @@ footer
 
   border: 6px black groove;
   box-shadow: 0px 10px 30px black;
-  margin: 3px
-
 }
 
 .pageactuelle
@@ -112,12 +116,11 @@ footer
   height: 1000px;
   border-radius: 10px;
   border: black 2px solid;
-  /*background-color: #E9D2C0 ;*/
-  background-image: url('images/parchemin.jpg');
+  background-color: #FCE5E1;
   position: relative;
   box-shadow: 0px 4px 4px #1c1a19;
 
-  margin: 25px 100px 25px 100px;
+  margin: 50px 100px 50px 100px;
 
   padding: 5px;
 
@@ -131,9 +134,9 @@ footer
 .titrepage
 {
   text-align: center;
-  font-family: 'policetitrepara';
+  font-family: 'policedutitre';
   color: purple;
   font-size: 50px;
-  text-decoration: underline;
   font-style: normal;
+  text-decoration: underline;
 }
