--- a/style.css
+++ b/style.css
@@ -113,10 +113,11 @@ nav a:hover
 h1
 {
   font-family: 'policedutitre';
-  color: purple;
+  color: black;
+  text-shadow: 0px 3px 3px #E66A8F;
   font-size: 50px;
   font-style: normal;
-  text-decoration: underline;
+  text-decoration: none;
   text-align: center;
 }
 
@@ -126,7 +127,7 @@ h2
   font-family: 'policedutitre';
   color: black;
   font-size: 40px;
-  text-decoration: underline;
+  text-decoration: none;
   font-style: normal;
 }
 
@@ -185,6 +186,20 @@ footer
   padding: 7px;
 }
 
+.imgcoin
+{
+  position: absolute;
+  right: 0;
+  padding-right: 2em;
+}
+
+.imgcoin2
+{
+  position: absolute;
+  left: 0;
+  padding-left: 2em;
+}
+
 #labio
 {
   text-align: left;
@@ -195,6 +210,7 @@ footer
   margin: 5%;
   display: flex;
   justify-content: space-around;
+
 }
 
 .imgpp
@@ -207,6 +223,8 @@ footer
 .whyweb
 {
   border-top: black 5px dotted;
+  border-bottom: black 5px dotted;
   padding: 7px;
   text-align: center;
+
 }
