--- a/style.css
+++ b/style.css
@@ -381,8 +381,17 @@ margin: 10px;
 {
   border: black 5px ridge;
   border-radius: 10px;
-  margin : 2%;
+  margin : 1%;
 }
+
+.musiquesjeu
+{
+  display: flex;
+  flex-direction: column;
+
+
+}
+
 
 /**********************************PAGE LECTURES*********************************************/
 
