--- a/style.css
+++ b/style.css
@@ -138,6 +138,11 @@ h2
   font-style: normal;
 }
 
+.h2projets
+{
+  text-align: center;
+}
+
 ul
 {
   font-family: 'policeparagraphes';
@@ -147,7 +152,10 @@ ul
 
 footer
 {
-  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  margin: 5px;
+
   background-color: #FCE5F0;
   border: 6px black groove;
   box-shadow: 0px 10px 30px black;
