ajout de liens + début page jeux vidéo(encorenonapparente)

--- a/style.css
+++ b/style.css
@@ -396,8 +396,11 @@ footer
 }
 
 
-/**********************************PAGE LECTURES*********************************************/
-
+/**********************************PAGE JEUX VIDEO*********************************************/
+.jeux
+{
+  
+}
 
 
 /*************************************PAGE VOYAGES******************************************/
